Bump org.javamodularity.moduleplugin from 1.5.0 to 1.7.0 (#6549)
* Bump org.javamodularity.moduleplugin from 1.5.0 to 1.7.0

Bumps org.javamodularity.moduleplugin from 1.5.0 to 1.7.0.

Signed-off-by: dependabot-preview[bot] <support@dependabot.com>

* Try to fix build by updating javafxplugin

* Add sona as plugin repo

* Update build.gradle

* Update settings.gradle

* Use preferred way to specify module information

* Remove redunant test config

* Update build.gradle

* Update build.gradle

* Update build.gradle

* Update build.gradle

* Update build.gradle

* Update module-info.test

* Update module-info.test

* Update module-info.java

* Update module-info.java

* Update build.gradle

* Update build.gradle

* Update build.gradle

* Update build.gradle

Co-authored-by: dependabot-preview[bot] <27856297+dependabot-preview[bot]@users.noreply.github.com>
Co-authored-by: Tobias Diez <tobiasdiez@gmx.de>
Co-authored-by: Oliver Kopp <kopp.dev@gmail.com>